fixing spacing issue on index page

--- a/main.css
+++ b/main.css
@@ -25,7 +25,7 @@ body {
 }
 
 article {
- padding-top: 8em;
+ padding-top: 7em;
  padding-bottom: 3em;
 }
 
@@ -92,7 +92,7 @@ p img {border: 0; float:left; margin: 10px 20px 10px 0px;}
 
 .header {
 	width: 96%;
-	padding-top: 0.6em;
+	padding-top: 1em;
 	margin-bottom: 5em;
 	font-size: 1.2em; 
 }
